- Made the Toolbar not allow overflow content. This will prevent ghosted buttons from showing
   up but there is more to do.

- Signed off by Jon Totton

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/Toolbar.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/Toolbar.css
@@ -15,6 +15,7 @@
   padding: 0px;
   width: 100%;
   height:38px;
+  overflow: hidden;
 }
 .fr-toolbar-slide {
   margin: 0px;
